<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >           
	<item
	    android:id="@+id/overflow_product_list"
	    android:icon="@drawable/ic_overflow"
	    android:showAsAction="ifRoom">
	</item>

	<item android:id="@+id/shareMenuButton"
          android:icon="@drawable/share" 
          android:title="@string/action_item_share_list" 
          android:enabled="true"
          android:showAsAction="never">       
    </item>
    <item android:id="@+id/scanMenuButton"
          android:icon="@drawable/share" 
          android:title="@string/action_item_scan" 
          android:enabled="true"
          android:showAsAction="never">       
    </item>
    <item android:id="@+id/addMenuButton"
          android:icon="@drawable/share" 
          android:title="@string/action_item_own_product" 
          android:enabled="true"
          android:showAsAction="never">       
    </item>
</menu>