<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/dodatkowe"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.58" >

            <pl.mareklatuszek.tpp.views.TextViewBariol
                android:id="@+id/terminWazTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/textView2"
                android:layout_marginLeft="29dp"
                android:layout_toRightOf="@+id/estimateTimeTxt"
                android:text="TextView"
                android:textAppearance="@style/TPP.Normal.TextAppearance"
                android:textColor="@color/dark_text_view" />

            <LinearLayout
                android:id="@+id/przypomnieniaLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/kategoriaTxt"
                android:layout_alignTop="@+id/textView3"
                android:orientation="vertical" >

            </LinearLayout>

            <pl.mareklatuszek.tpp.views.TextViewBariol
                android:id="@+id/kategoriaTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/textView2"
                android:layout_alignBottom="@+id/textView2"
                android:layout_alignLeft="@+id/terminWazTxt"
                android:text="TextView"
                android:textAppearance="@style/TPP.Normal.TextAppearance"
                android:textColor="@color/dark_text_view" />

            <pl.mareklatuszek.tpp.views.TextViewBariol
                android:id="@+id/estimateTimeTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="26dp"
                android:text="@string/tv_validity_date"
                android:textAppearance="@style/TPP.Normal.TextAppearance"
                android:textColor="@color/medium_text_view" />

            <pl.mareklatuszek.tpp.views.TextViewBariol
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/estimateTimeTxt"
                android:layout_below="@+id/estimateTimeTxt"
                android:layout_marginTop="@dimen/product_row_top_margin"
                android:text="@string/tv_category"
                android:textAppearance="@style/TPP.Normal.TextAppearance"
                android:textColor="@color/medium_text_view" />

            <pl.mareklatuszek.tpp.views.TextViewBariol
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView2"
                android:layout_below="@+id/textView2"
                android:layout_marginTop="@dimen/product_row_top_margin"
                android:text="@string/tv_alarms"
                android:textAppearance="@style/TPP.Normal.TextAppearance"
                android:textColor="@color/medium_text_view" />

        </RelativeLayout>
    </LinearLayout>

</LinearLayout>
