<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fragment_background"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="225dp"
                android:layout_height="150dp"
                android:layout_marginTop="30dp"
                android:src="@drawable/image_logo" />

            <pl.mareklatuszek.tpp.views.TextViewBariol
                android:id="@+id/versionTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="Wersja 1.0.6"
                android:textAppearance="@style/TPP.Medium.TextAppearance"
                android:textColor="@color/dark_text_view" />

            <pl.mareklatuszek.tpp.views.TextViewBariol
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="© Jacek Jabłonka"
                android:textAppearance="@style/TPP.Normal.TextAppearance"
                android:textColor="@color/dark_text_view" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/spinner_back"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <pl.mareklatuszek.tpp.views.TextViewBariol
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_instruction"
                        android:textAllCaps="true"
                        android:textAppearance="@style/TPP.Normal.TextAppearance"
                        android:textColor="@color/light_text_view" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:background="@color/dark_text_view"
                android:orientation="vertical" >
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical" >

                <pl.mareklatuszek.tpp.views.TextViewBariol
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/tv_discription"
                    android:textAppearance="@style/TPP.Medium.TextAppearance"
                    android:textColor="@color/dark_text_view" />

                <pl.mareklatuszek.tpp.views.TextViewBariol
                    android:id="@+id/regulaminTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="15dp"
                    android:text="@string/tv_regulations"
                    android:textAppearance="@style/TPP.Normal.TextAppearance"
                    android:textColor="@color/medium_text_view" />
            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</LinearLayout>