<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/detailsLay"
        android:layout_width="match_parent"
        android:layout_height="@dimen/products_details_height"
        android:background="#20ffffff"
        android:visibility="visible" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".5"
            android:background="@color/products_dates_bg"
            android:gravity="center_vertical"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/okresWazLay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <pl.mareklatuszek.tpp.views.TextViewBariol
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:text="@string/tv_open_date"
                    android:textAppearance="@style/TPP.XSmall.TextAppearance"
                    android:textColor="@color/light_text_view" />

                <pl.mareklatuszek.tpp.views.TextViewBariol
                    android:id="@+id/dataOtwTxtList"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:text="TextView"
                    android:textAppearance="@style/TPP.Normal.TextAppearance"
                    android:textColor="@color/light_text_view" />

                <pl.mareklatuszek.tpp.views.TextViewBariol
                    android:id="@+id/TextView01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:text="@string/tv_validity_date"
                    android:textAppearance="@style/TPP.XSmall.TextAppearance"
                    android:textColor="@color/light_text_view" />

                <pl.mareklatuszek.tpp.views.TextViewBariol
                    android:id="@+id/terminWazTxtList"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:text="TextView"
                    android:textAppearance="@style/TPP.Normal.TextAppearance"
                    android:textColor="@color/light_text_view" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".5" >

            <LinearLayout
                android:id="@+id/deleteLay"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:background="@drawable/button_delete_back"
                android:clickable="true"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/products_trash_image_height"
                    android:clickable="false"
                    android:src="@drawable/image_trash" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/showProdLay"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/button_show_back"
                android:clickable="true"
                android:gravity="center"
                android:orientation="vertical" >

                <pl.mareklatuszek.tpp.views.TextViewBariol
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:gravity="center_horizontal"
                    android:text="@string/tv_product_page"
                    android:textAllCaps="true"
                    android:textAppearance="@style/TPP.Normal.TextAppearance"
                    android:textColor="@color/light_text_view" />

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="@dimen/products_arrow_image"
                    android:layout_height="@dimen/products_arrow_image"
                    android:layout_marginTop="4dp"
                    android:clickable="false"
                    android:src="@drawable/image_arrow" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
